<resources>
    <string name="app_name">Корзина продаж</string>

    <!--ЕКРАН СПИСКУ ПРОДУКТІВ-->
    <string name="bottom_navigation_menu_list_caption">Список</string>
    <string name="bottom_navigation_menu_cart_caption">Корзина</string>
    <string name="bottom_navigation_menu_report_caption">Отчет</string>
    <string name="product_list_activity_caption">Корзина товаров</string>
    <string name="product_list_fragment_total_caption">СУММА:</string>
    <string name="pay_button_product_payment_activity">Платеж</string>

    <!--Контекстне меню-->
    <string name="item_product_change_context_menu">Сдача</string>
    <string name="item_product_delete_context_menu">Удалить</string>
    <string name="context_menu_recycler_view_item">Контекстное меню</string>

    <!--Текстове значення валюти для відображення на екрані-->
    <string name="default_price_for_items">0.00</string>
    <string name="name_currency">Валюта</string>
    <string name="text_input_currency_setting_dialog">Введите название валюты</string>

    <!--Заголовки меню-->
    <string name="item_settings_product_activity_menu">Настройки</string>
    <string name="item_sorting_product_activity_menu">Сортировка</string>
        <string name="item_sort_ascending_price">Цена</string>
        <string name="item_sort_descending_price">Цена</string>
        <string name="item_sort_ascending_caption">Название</string>
        <string name="item_sort_descending_caption">Название</string>
    <string name="item_save_add_change_product">Сохранить</string>
    <string name="search_view_default_hint">Поиск...</string>
    <string name="total_price_to_pay">К оплате:</string>
    <string name="column_name_products_on_cart">Название</string>
    <string name="column_count_selected_products_on_cart">Количество</string>
    <string name="summary_price_every_type_of_product_on_cart">Сумма</string>

    <!--Content Description для кнопок-->
    <string name="item_cancel_product_list_recycler_view">ОТМЕНА</string>
    <string name="mic_voice_search">Поиск</string>

    <!--Тексти повідомлень користувачу-->
    <string name="speech_voice_search_unable_support">Ваше устройство не поддерживает голосовой поиск!</string>
    <string name="incorrect_text_input">Некоректное значение в текстовом поле</string>
    <string name="incorrect_cash_value">Не достаточно денег для платежа</string>

    <!--ЕКРАН ДОДАВАННЯ/РЕДАГУВАННЯ ТОВАРУ-->
    <!--Підказки на елементах EditText-->
    <string name="product_name_hint_add_activity">Название продукта</string>
    <string name="product_price_hint_add_activity">Цена</string>
    
        <!--ЕКРАН ПРОВЕДЕННЯ ОПЛАТИ-->
        <string name="payment_main_button_caption">Оплатить</string>
        <!--Назви кнопок для додавання купюр-->
        <string name="payment_button_first_bill">+10</string>
        <string name="payment_button_second_bill">+20</string>
        <string name="payment_button_third_bill">+50</string>
        <string name="payment_button_fourth_bill">+100</string>
        <string name="payment_button_fifth_bill">+200</string>
        <string name="payment_button_sixth_bill">+500</string>

        <!--Назви кнопок для ручного введення суми-->
        <string name="payment_numb_button_one">1</string>
        <string name="payment_numb_button_two">2</string>
        <string name="payment_numb_button_three">3</string>
        <string name="payment_numb_button_four">4</string>
        <string name="payment_numb_button_five">5</string>
        <string name="payment_numb_button_six">6</string>
        <string name="payment_numb_button_seven">7</string>
        <string name="payment_numb_button_eight">8</string>
        <string name="payment_numb_button_nine">9</string>
        <string name="payment_numb_button_dot">.</string>
        <string name="payment_numb_button_null">0</string>
        <string name="payment_numb_button_clear">C</string>

        <!--Назви TextView для відображення інформації в ModalBottomSheet діалог проведення платежу-->
        <string name="payment_text_view_cash_caption">Наличка</string>
        <string name="payment_text_view_change_caption">Сдача</string>
    
        <!--ЕКРАН ЗВІТІВ ПО ЧЕКАМ-->
        <string name="reports_fragment_check_number_caption">Номер</string>
        <string name="reports_fragment_check_date_caption">Дата</string>
        <string name="reports_fragment_check_price_caption">Цена</string>

    <!--ЕКРАН ВІДОБРАЖЕННЯ ЧЕКУ-->
    <string name="payment_report_activity_check_number_caption">Чек №</string>
    <string name="payment_report_activity_check_date_caption">Дата чека:</string>
    <string name="payment_report_activity_check_products_list">Товары:</string>
    <string name="payment_report_activity_name_product">Название</string>
    <string name="payment_report_activity_count_product">Количество</string>
    <string name="payment_report_activity_total_price_product">Цена</string>
    <string name="payment_report_activity_check_total_price_caption">Общая цена:</string>
    <string name="payment_report_activity_given_cash">Наличка:</string>
    <string name="payment_report_activity_payment_change">Сдача:</string>


</resources>
