<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_payment_calculator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/ll_payments_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/ib_payment_sheet_button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_payment_sheet_arrow_down"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cash"
            style="@style/PaymentBottomSheetTextViewCaptionStyle"/>

        <android.support.design.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:strokeColor="@android:color/holo_green_dark"
            app:strokeWidth="@dimen/payment_material_card_stroke_width"
            android:padding="@dimen/payment_views_padding"
            android:layout_margin="@dimen/payment_views_layout_margins"
            app:cardCornerRadius="@dimen/payment_material_card_corners">

            <TextView
                android:id="@+id/tv_payment_sheet_customer_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="300.00"
                android:textAlignment="viewStart"
                style="@style/PaymentBottomSheetTextViewCaptionStyle"/>

        </android.support.design.card.MaterialCardView>

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/payment_material_card_stroke_width"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/payment_views_layout_margins"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Change"
            style="@style/PaymentBottomSheetTextViewCaptionStyle"/>

        <TextView
            android:id="@+id/tv_payment_sheet_customer_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="50.00"
            android:textAlignment="viewStart"
            style="@style/PaymentBottomSheetTextViewCaptionStyle"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_payment_numbers_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_payments_info_container">

        <LinearLayout
            android:id="@+id/ll_payment_bills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/list_elements_margin_dimen"
            android:layout_weight="1">

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_payment_bill_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_button_first_bill"
                android:theme="@style/MaterialButtonStyle"
                style="@style/MaterialButtonStyle.BillButton"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_payment_bill_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_button_second_bill"
                android:theme="@style/MaterialButtonStyle"
                style="@style/MaterialButtonStyle.BillButton"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_payment_bill_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_button_third_bill"
                android:theme="@style/MaterialButtonStyle"
                style="@style/MaterialButtonStyle.BillButton"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_payment_bill_fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_button_fourth_bill"
                android:theme="@style/MaterialButtonStyle"
                style="@style/MaterialButtonStyle.BillButton"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_payment_bill_fifth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_button_fifth_bill"
                android:theme="@style/MaterialButtonStyle"
                style="@style/MaterialButtonStyle.BillButton"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_payment_bill_sixth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_button_sixth_bill"
                android:theme="@style/MaterialButtonStyle"
                style="@style/MaterialButtonStyle.BillButton"/>



        </LinearLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_seven"
                    style="@style/MaterialButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_seven"
                    android:theme="@style/MaterialButtonStyle" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_eight"
                    style="@style/MaterialButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_eight"
                    android:theme="@style/MaterialButtonStyle" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_nine"
                    style="@style/MaterialButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_nine"
                    android:theme="@style/MaterialButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center">

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_four"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_four"
                    android:theme="@style/MaterialButtonStyle"
                    style="@style/MaterialButtonStyle"/>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_five"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_five"
                    android:theme="@style/MaterialButtonStyle"
                    style="@style/MaterialButtonStyle"/>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_six"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_six"
                    android:theme="@style/MaterialButtonStyle"
                    style="@style/MaterialButtonStyle"/>
            </TableRow>

            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center">
                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_one"
                    android:theme="@style/MaterialButtonStyle"
                    style="@style/MaterialButtonStyle"/>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_two"
                    android:theme="@style/MaterialButtonStyle"
                    style="@style/MaterialButtonStyle"/>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_three"
                    android:theme="@style/MaterialButtonStyle"
                    style="@style/MaterialButtonStyle"/>
            </TableRow>

            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center">
                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_null"
                    android:theme="@style/MaterialButtonStyle"
                    style="@style/MaterialButtonStyle"/>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_dot"
                    android:theme="@style/MaterialButtonStyle"
                    style="@style/MaterialButtonStyle"/>

                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_payment_numb_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/payment_numb_button_clear"
                    android:theme="@style/MaterialButtonStyle"
                    style="@style/MaterialButtonStyle"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_payment_make_payment"
        style="@style/MaterialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MaterialButtonStyle"
        android:layout_margin="@dimen/payment_main_button_margin"
        android:text="@string/payment_main_button_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_payment_numbers_container" />

</android.support.constraint.ConstraintLayout>